--- a/templates/component/_card_image.html.twig
+++ b/templates/component/_card_image.html.twig
@@ -1,4 +1,4 @@
-<img src="{{ asset('images/card_image/' ~ packCard.pack.id ~ '/' ~ packCard.card.id ~ '.webp') }}"
+<img src="{{ packCard.imageUrl }}"
      class="img-fluid rounded-4"
      width="302px" height="422px"
      alt="{{ packCard.card.name }}">
