--- a/templates/component/_full_form.html.twig
+++ b/templates/component/_full_form.html.twig
@@ -4,7 +4,7 @@
     <div class="col-sm">{{ form_row(form.text) }}</div>
 </div>
 <div class="row">
-    <div class="col-sm">{{ form_row(form.faction) }}</div>
+    <div class="col-sm">{{ form_row(form.clan) }}</div>
     <div class="col-sm">{{ form_row(form.cost) }}</div>
 </div>
 <div class="row">
