--- a/templates/component/_card_text.html.twig
+++ b/templates/component/_card_text.html.twig
@@ -1,5 +1,5 @@
 <p>
-    Faction: <span class="icon-{{ card.faction.value }}"></span> {{ card.faction.value | trans({}, 'factions') }}
+    Clan: <span class="icon-{{ card.clan.value }}"></span> {{ card.clan.value | trans({}, 'clans') }}
 </p>
 {% if card.cost is not null %}
 <p>
@@ -8,15 +8,15 @@
 {% endif %}
 <p>
     Type: {{ card.type.value | trans({}, 'types') }}
-    {% if card.subtypes | length > 0 %}
-        &mdash; {{ card.formatSubtypes() }}
+    {% if card.traits | length > 0 %}
+        &mdash; {{ card.formatTraits() }}
     {% endif %}
 </p>
 {% if card.type.value == 'unit' %}
     <p>
         Attack: {{ card.attack }} &ndash;
         Armor: {{ card.armor }} &ndash;
-        Health: {{ card.health }} {{ card.citizenToken | tokens }}
+        Health: {{ card.health }} {{ card.citizenToken  }}
     </p>
 {% endif %}
 <hr>
