--- a/templates/component/_type_hyperlink.html.twig
+++ b/templates/component/_type_hyperlink.html.twig
@@ -1,6 +1,6 @@
 <a href="{{ path('app_search_cards', {'q':card.typeQuery()}) }}" class="text-decoration-none">
 {{ card.type.value | trans({}, 'types') }}
-{% if card.subtypes | length > 0 %}
-    &mdash; {{ card.formatSubtypes() }}
+{% if card.traits | length > 0 %}
+    &mdash; {{ card.formatTraits() }}
 {% endif %}
     </a>
