--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -2,16 +2,14 @@
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="{{ path('app_home') }}" class="nav-link px-2 text-muted">Home</a></li>
         <li class="nav-item d-none"><a href="#" class="nav-link px-2 text-muted">About us</a></li>
-        <li class="nav-item"><a href="https://github.com/alsciende/sovereigndb" class="nav-link px-2 text-muted">Github</a></li>
-        <li class="nav-item"><a href="https://www.fallofwormwood.com/" class="nav-link px-2 text-muted">Official Site</a></li>
+        <li class="nav-item"><a href="https://github.com/alsciende/fiveringsdb" class="nav-link px-2 text-muted">Github</a></li>
+        <li class="nav-item"><a href="https://www.fantasyflightgames.com/en/products/legend-of-the-five-rings-the-card-game/" class="nav-link px-2 text-muted">Official Site</a></li>
     </ul>
     <p class="text-center text-muted">© 2024 Alsciende + LG</p>
     <p class="text-center text-muted">
         <small>
-        All game content is property of Ixion Gameworks.
-        All card art is property of their respective credited artists.
-        Card images are hosted on this website with the permission of Ixion Gameworks.
-        This website is not affiliated with Ixion Gameworks.
+        All game content is property of Fantasy Flight Games.
+        This website is not affiliated with Fantasy Flight Games.
         </small>
     </p>
 </footer>
