--- a/templates/component/card_list/_full.html.twig
+++ b/templates/component/card_list/_full.html.twig
@@ -7,7 +7,7 @@
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
                                 data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
-                                aria-selected="true">{{ packCard.pack.id }}</button>
+                                aria-selected="true">{{ packCard.pack.shorthand }}</button>
                     </li>
                 {% endfor %}
             </ul>
