phpstan bleeding edge

--- a/templates/component/_card_image.html.twig
+++ b/templates/component/_card_image.html.twig
@@ -1,4 +1,4 @@
-<img src="{{ packCard.imageUrl }}"
+<img src="{{ asset('images/pack_cards/' ~ packCard.pack.id ~ '/' ~ packCard.card.id ~ '.webp') }}"
      class="img-fluid rounded-4"
      width="350px" height="500px"
      alt="{{ packCard.card.name }}">
